# xsdata-odoo

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  files.txt  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: plantuml.yml  publish.yml  tests.yml
tests/: test_generator.py
tests/fixtures/cfdi/catalogos/: catCFDI.xsd
tests/fixtures/nfe/: leiauteNFe_v4.00.xsd  models.py
tests/fixtures/po/: models.py  po.xsd
tests/fixtures/po_with_nesting/: models.py  po.xsd
tests/fixtures/ubl/common_aggregate_components/: ubl_common_aggregate_components_2_3.py
xsdata_odoo/: __init__.py  config.py  constants.py  filters.py  generator.py  hook.py  merge_attributes.py  text_utils.py  wrap_text.py
xsdata_odoo/codegen/: resolver.py
xsdata_odoo/templates/: class.jinja2  enum.jinja2  imports.jinja2  module.jinja2
