[metadata]
name = xsdata_odoo
version = 0.1.0
description = xsdata Odoo generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akretion/xsdata-odoo
author = Raphaël Valyi
author_email = "raphael.valyi@akretion.com",
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Code Generators
    Topic :: Text Processing :: Markup :: XML
keywords = xsd,wsdl,schema,xml,uml,odoo,generator,cli
project_urls =
    Source=https://github.com/akretion/xsdata-odoo

[options]
packages = xsdata_odoo
install_requires =
    lxml>=4.4.1
    xsdata[cli]
python_requires = >=3.6
include_package_data = True

[options.entry_points]
xsdata.plugins.cli =
    xsdata_odoo = xsdata_odoo.hook

[options.extras_require]
test =
    codecov
    pre-commit
    pytest
    pytest-cov
    tox

[flake8]
exclude = tests/*
max-line-length = 88
ignore = W503,ANN101,ANN102,E203

[doc8]
max-line-length = 88

[tool:pytest]
addopts = --color=yes
